--- a/assets/references.bib
+++ b/assets/references.bib
@@ -6279,7 +6279,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 }
 @article{Soroka2008,
 	title        = {{On the Limits to Inequality in Representation}},
-	author       = {Soroka, Stuart N. and Wlezien, Christopher},
+	author       = {Soroka, Stuart N and Wlezien, Christopher},
 	year         = 2008,
 	month        = {apr},
 	journal      = {Ps - Political Science and Politics},
