--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,14 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{pilet2023politicians,
+  title={Do Politicians Outside the United States Also Think Voters Are More Conservative than They Really Are?},
+  author={Pilet, Jean-Beno{\^\i}t and Sheffer, Lior and Helfer, Luzia and VARONE, FREDERIC and VLIEGENTHART, RENS and WALGRAVE, STEFAAN},
+  journal={American Political Science Review},
+  pages={1--9},
+  year={2023},
+  publisher={Cambridge University Press}
+}
 @article{Nzabonimpa2023,
 title = {Gender differences in politician persistence and incumbency advantage},
 journal = {European Journal of Political Economy},
