--- a/assets/references.bib
+++ b/assets/references.bib
@@ -1295,7 +1295,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 }
 @book{BudgeI1983,
 	title        = {{Explaining and Predicting Elections: Issue Effects and Party Strategies in Twenty-Three Democracies}},
-	author       = {Budge, I. and D. Farlie},
+	author       = {Budge, Ian and D. Farlie},
 	year         = 1983,
 	publisher    = {Allen \& Unwin},
 	address      = {London},
