--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,26 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{de2012dimensions,
+  title={When dimensions collide: The electoral success of issue entrepreneurs},
+  author={De Vries, Catherine E and Hobolt, Sara B},
+  journal={European Union Politics},
+  volume={13},
+  number={2},
+  pages={246--268},
+  year={2012},
+  publisher={Sage Publications Sage UK: London, England}
+}
+@article{van2014exploiting,
+  title={Exploiting the cracks: Wedge issues in multiparty competition},
+  author={Van de Wardt, Marc and De Vries, Catherine E and Hobolt, Sara B},
+  journal={The Journal of Politics},
+  volume={76},
+  number={4},
+  pages={986--999},
+  year={2014},
+  publisher={Cambridge University Press New York, USA}
+}
 @article{pilet2023politicians,
   title={Do Politicians Outside the United States Also Think Voters Are More Conservative than They Really Are?},
   author={Pilet, Jean-Beno{\^\i}t and Sheffer, Lior and Helfer, Luzia and VARONE, FREDERIC and VLIEGENTHART, RENS and WALGRAVE, STEFAAN},
