--- a/assets/references.bib
+++ b/assets/references.bib
@@ -17,6 +17,16 @@
   year={2012},
   publisher={Sage Publications Sage UK: London, England}
 }
+@article{sevenans2022inequality,
+  title={Inequality in the public priority perceptions of elected representatives},
+  author={Sevenans, Julie and Soontjens, Karolin and Walgrave, Stefaan},
+  journal={West European Politics},
+  volume={45},
+  number={5},
+  pages={1057--1080},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
 @article{van2014exploiting,
   title={Exploiting the cracks: Wedge issues in multiparty competition},
   author={Van de Wardt, Marc and De Vries, Catherine E and Hobolt, Sara B},
