--- a/assets/references.bib
+++ b/assets/references.bib
@@ -17,6 +17,16 @@
   year={2012},
   publisher={Sage Publications Sage UK: London, England}
 }
+@article{reher2016effects,
+  title={The effects of congruence in policy priorities on satisfaction with democracy},
+  author={Reher, Stefanie},
+  journal={Journal of elections, public opinion and parties},
+  volume={26},
+  number={1},
+  pages={40--57},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
 @article{sevenans2022inequality,
   title={Inequality in the public priority perceptions of elected representatives},
   author={Sevenans, Julie and Soontjens, Karolin and Walgrave, Stefaan},
