--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,14 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@inproceedings{bartels1996politicians,
+  title={Politicians and the press: Who leads, who follows},
+  author={Bartels, Larry M},
+  booktitle={Annual Meeting of the American Political Science Association},
+  pages={1--60},
+  year={1996},
+  organization={San Francisco, CA}
+}
 @article{de2012dimensions,
   title={When dimensions collide: The electoral success of issue entrepreneurs},
   author={De Vries, Catherine E and Hobolt, Sara B},
