--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,16 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{rasmussen2018little,
+  title={With a little help from the people? The role of public opinion in advocacy success},
+  author={Rasmussen, Anne and M{\"a}der, Lars Kai and Reher, Stefanie},
+  journal={Comparative Political Studies},
+  volume={51},
+  number={2},
+  pages={139--164},
+  year={2018},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
 @inproceedings{bartels1996politicians,
   title={Politicians and the press: Who leads, who follows},
   author={Bartels, Larry M},
