--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,16 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{vogler2021csr,
+  title={CSR communication, corporate reputation, and the role of the news media as an agenda-setter in the digital age},
+  author={Vogler, Daniel and Eisenegger, Mark},
+  journal={Business \& Society},
+  volume={60},
+  number={8},
+  pages={1957--1986},
+  year={2021},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
 @article{rasmussen2018little,
   title={With a little help from the people? The role of public opinion in advocacy success},
   author={Rasmussen, Anne and M{\"a}der, Lars Kai and Reher, Stefanie},
