--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,26 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{comfort2019three,
+  title={Three dimensions of social media messaging success by environmental NGOs},
+  author={Comfort, Suzannah Evans and Hester, Joe Bob},
+  journal={Environmental Communication},
+  volume={13},
+  number={3},
+  pages={281--286},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
+@article{vu2021social,
+  title={Social media and environmental activism: Framing climate change on Facebook by global NGOs},
+  author={Vu, Hong Tien and Blomberg, Matthew and Seo, Hyunjin and Liu, Yuchen and Shayesteh, Fatemeh and Do, Hung Viet},
+  journal={Science communication},
+  volume={43},
+  number={1},
+  pages={91--115},
+  year={2021},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
 @article{vogler2021csr,
   title={CSR communication, corporate reputation, and the role of the news media as an agenda-setter in the digital age},
   author={Vogler, Daniel and Eisenegger, Mark},
@@ -945,6 +965,16 @@ abstract = {The paper studies the effect of politicians’ education levels on g
 	volume       = 47,
 	number       = 2,
 	pages        = {247--274}
+}
+@article{merilainen2011human,
+  title={Human rights organizations and online agenda setting},
+  author={Meril{\"a}inen, Niina and Vos, Marita},
+  journal={Corporate Communications: An International Journal},
+  volume={16},
+  number={4},
+  pages={293--310},
+  year={2011},
+  publisher={Emerald Group Publishing Limited}
 }
 @article{kluver2019they,
 	title        = {Are they listening? Public opinion, interest groups and government responsiveness},
@@ -5488,6 +5518,16 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	volume       = 16,
 	number       = 9,
 	pages        = {e0257151}
+}
+@article{bachrach1962twofaces,
+  title={Two Faces of Power},
+  author={Bachrach, Peter and Baratz, Morton S.},
+  journal={The American Political Science Review},
+  volume={56},
+  number={4},
+  year={1962},
+  pages={947--952},
+  publisher={Cambridge University Press}
 }
 @article{rao2021political,
 	title        = {{Political Partisanship and Antiscience Attitudes in Online Discussions About Covid-19: Twitter Content Analysis}},
