--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,155 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{walgrave2022revisiting,
+  title={Revisiting Elite Perceptions as Mediator of Elite Responsiveness to Public Opinion},
+  author={Walgrave, Stefaan and Soroka, Stuart and Loewen, Peter and Sheafer, Tamir and Soontjens, Karolin},
+  journal={Political Studies},
+  pages={00323217221105170},
+  year={2022},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+@article{meltzer1981rational,
+	title = {{A Rational Theory of the Size of Government}},
+	author = {Meltzer, Allan H and Richard, Scott F},
+	year = 1981,
+	journal = {Journal of Political Economy},
+	publisher = {The University of Chicago Press},
+	volume = 89,
+	number = 5,
+	pages = {914--927},
+}
+@article{guillaud2013preferences,
+	title = {Preferences for redistribution: an empirical analysis over 33 countries},
+	author = {Guillaud, Elvire},
+	year = 2013,
+	journal = {The Journal of Economic Inequality},
+	publisher = {Springer},
+	volume = 11,
+	pages = {57--78},
+}
+@article{manstead2018psychology,
+	title = {The psychology of social class: How socioeconomic status impacts thought, feelings, and behaviour},
+	author = {Manstead, Antony SR},
+	year = 2018,
+	journal = {British Journal of Social Psychology},
+	publisher = {Wiley Online Library},
+	volume = 57,
+	number = 2,
+	pages = {267--291},
+}
+@article{thomas1991impact,
+	title        = {The impact of women on state legislative policies},
+	author       = {Thomas, Sue},
+	year         = 1991,
+	journal      = {The Journal of Politics},
+	publisher    = {University of Texas Press},
+	volume       = 53,
+	number       = 4,
+	pages        = {958--976}
+}
+@article{dickson2021sets,
+  title={Who sets the agenda? MPs’ responsiveness to NGOs, corporations and the media},
+  author={Dickson, Zachary},
+  journal={SSRN},
+  url = {https://ssrn.com/abstract=4348997},
+  note = {Available at: https://ssrn.com/abstract=4348997},
+  year={2021}
+}
+@article{peeters2021party,
+  title={Party ownership or individual specialization? A comparison of politicians’ individual issue attention across three different agendas},
+  author={Peeters, Jeroen and Van Aelst, Peter and Praet, Stiene},
+  journal={Party Politics},
+  volume={27},
+  number={4},
+  pages={692--703},
+  year={2021},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+@article{franceschet2008gender,
+	title        = {Gender quotas and women's substantive representation: Lessons from Argentina},
+	author       = {Franceschet, Susan and Piscopo, Jennifer M},
+	year         = 2008,
+	journal      = {Politics \& Gender},
+	publisher    = {Cambridge University Press},
+	volume       = 4,
+	number       = 3,
+	pages        = {393--425}
+}
+@article{hobolt2015issue,
+  title={Issue entrepreneurship and multiparty competition},
+  author={Hobolt, Sara B and De Vries, Catherine E},
+  journal={Comparative Political Studies},
+  volume={48},
+  number={9},
+  pages={1159--1185},
+  year={2015},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+@article{richardson1995gender,
+  title={Gender differences in constituency service among state legislators},
+  author={Richardson Jr, Lilliard E and Freeman, Patricia K},
+  journal={Political Research Quarterly},
+  volume={48},
+  number={1},
+  pages={169--179},
+  year={1995},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+@article{rhinehart2020mentoring,
+  title={Mentoring the next generation of women candidates: A field experiment of state legislators},
+  author={Rhinehart, Sarina},
+  journal={American Politics Research},
+  volume={48},
+  number={4},
+  pages={492--505},
+  year={2020},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+@incollection{norris2003gender,
+  title = "The Gender Gap: Old Challenges, New Approaches",
+  author = "Norris, Pippa",
+  booktitle = "Women and American Politics: New Questions, New Directions",
+  editor = "Carroll, Susan J.",
+  year = "2003",
+  pages = "146--172"
+}
+@article{griffin2012gender,
+  title={A gender gap in policy representation in the US Congress?},
+  author={Griffin, John D and Newman, Brian and Wolbrecht, Christina},
+  journal={Legislative Studies Quarterly},
+  volume={37},
+  number={1},
+  pages={35--66},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+@article{dennison2019review,
+  title={A review of public issue salience: Concepts, determinants and effects on voting},
+  author={Dennison, James},
+  journal={Political Studies Review},
+  volume={17},
+  number={4},
+  pages={436--446},
+  year={2019},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+@article{bates2020juliastats,
+  title={JuliaStats/MixedModels. jl: v2. 3.0},
+  author={Bates, Douglas and Alday, Phillip and Kleinschmidt, Dave and Calder{\'o}n, Jos{\'e} Bayo{\'a}n Santiago and Noack, Andreas and Kelman, Tony and Baldassari, A},
+  journal={Zenodo. Mar},
+  year={2020}
+}
+@article{silva2022politicians,
+  title={Politicians unleashed? Political communication on Twitter and in parliament in Western Europe},
+  author={Silva, Bruno Castanho and Proksch, Sven-Oliver},
+  journal={Political science research and methods},
+  volume={10},
+  number={4},
+  pages={776--792},
+  year={2022},
+  publisher={Cambridge University Press}
+}
 @article{comfort2019three,
   title={Three dimensions of social media messaging success by environmental NGOs},
   author={Comfort, Suzannah Evans and Hester, Joe Bob},
